# rekordbox-tools

./: .gitignore  README.md  pyproject.toml
rekordbox_tools/: main.py  move_files_from_usb_to_external_drive.py  rename_files_no_numbers.py
rekordbox_tools/graveyard/: attach_image_to_flac.py  convert_flac_to_aiff.py
